--- a/common/header.html
+++ b/common/header.html
@@ -72,20 +72,13 @@
                 ><i class="fa-brands fa-java"></i> Java</a
               >
             </li>
-            <li>
-              <a
-                class="dropdown-item"
-                href="./../exercises/mysql-exercises.html"
-                ><i class="fa-solid fa-code"></i> Mysql</a
-              >
-            </li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#courses">More..</a></li>
+            <!-- <li><hr class="dropdown-divider" /></li>
+            <li><a class="dropdown-item" href="#courses">More..</a></li> -->
           </ul>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
             <a class="nav-link" href="#">Cheat Sheet</a>
-          </li> -->
+          </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li>
