--- a/courses/computer-fundamental-courses.html
+++ b/courses/computer-fundamental-courses.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tamiltechy | Mysql</title>
+    <title>Tamiltechy | Computer fundamental</title>
 
     <link rel="stylesheet" href="./../assets/css/style.css" />
     <link rel="stylesheet" href="./../assets/css/common.css" />
@@ -15,12 +15,12 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+
     <!-- link fontawesome -->
     <script
       src="https://kit.fontawesome.com/55581d092f.js"
       crossorigin="anonymous"
     ></script>
-
     <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -36,12 +36,13 @@
   <body id="body">
     <!-- loader -->
     <div id="preLoader"></div>
+
     <!-- Header -->
     <header id="header"></header>
-    <section class="main-content container">
-      <h1>Mysql</h1>
+    <section class="main-content">
+      <h1>Computer fundamental</h1>
       <iframe
-        src="https://docs.google.com/presentation/d/e/2PACX-1vSmSKjJb5QSx9XhNrRECWldWAaVD9kGlo-6Sgiu_ki99biIuXlEE7ic3mqwGs1ZIw/embed?start=false&loop=false&delayms=3000"
+        src="https://docs.google.com/presentation/d/e/2PACX-1vRJTLoez3LeIB1w2LjYx3OOdVgflrcnbeOvOzw5ovd0GQQ7WAc_pxKEgCe2t7EEWg/embed?start=false&loop=false&delayms=3000"
         frameborder="0"
         width="1440"
         height="839"
