--- a/courses/html-courses.html
+++ b/courses/html-courses.html
@@ -7,6 +7,7 @@
     <title>Tamiltechy | HTML</title>
 
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/common.css" />
 
     <!-- Link boostrap -->
     <link
@@ -40,7 +41,8 @@
 
     <!-- Header -->
     <header id="header"></header>
-    <section class="main-content">
+    <section class="main-content container">
+      <h1>HTML</h1>
       <iframe
         src="https://docs.google.com/presentation/d/e/2PACX-1vRZ22kP7STbcQiNGHRCBO844DKyCUsQUwGistuWnAxHDlknBwlRLl-mESlU8KM6DA/embed?start=true&loop=true&delayms=3000"
         frameborder="0"
@@ -53,6 +55,8 @@
     </section>
 
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/common.js"></script>
+
 
     <!-- Link boostrap -->
     <script
