--- a/courses/java-courses.html
+++ b/courses/java-courses.html
@@ -40,7 +40,7 @@
     <!-- Header -->
     <header id="header"></header>
     <section class="main-content container" id="java">
-      <h1 id="oops">Java</h1>
+      <h1>Java</h1>
       <div>
         <iframe
           src="https://docs.google.com/presentation/d/e/2PACX-1vQ_ZC0k74z9ccXQJtRQcZVHLSi6g0cqHOO-5qteH6_mgUM0wPkDTSa7JA82y-zChg/embed?start=false&loop=false&delayms=3000"
