--- a/courses/linux-courses.html
+++ b/courses/linux-courses.html
@@ -7,6 +7,7 @@
     <title>Tamiltechy | Linux</title>
 
     <link rel="stylesheet" href="./../assets/css/style.css" />
+    <link rel="stylesheet" href="./../assets/css/common.css" />
     <!-- Link boostrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -38,6 +39,7 @@
     <!-- Header -->
     <header id="header"></header>
     <section class="main-content">
+      <h1>Linux</h1>
       <iframe
         src="https://docs.google.com/presentation/d/e/2PACX-1vRjFk_h7oKffkD66PYXY1sXRgbhBuE0NHsLE3RKz0v9eyihHItY6rDsDTzWUTR9Wg/embed?start=false&loop=false&delayms=3000"
         frameborder="0"
@@ -50,6 +52,7 @@
     </section>
 
     <script src="./../assets/js/main.js"></script>
+    <script src="./../assets/js/common.js"></script>
 
     <!-- Link boostrap -->
     <script
