--- a/courses/ruby-on-rails-courses.html
+++ b/courses/ruby-on-rails-courses.html
@@ -7,6 +7,7 @@
     <title>Tamiltechy | ROR</title>
 
     <link rel="stylesheet" href="./../assets/css/style.css" />
+    <link rel="stylesheet" href="./../assets/css/common.css" />
     <!-- Link boostrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -37,7 +38,8 @@
     <div id="preLoader"></div>
     <!-- Header -->
     <header id="header"></header>
-    <section class="main-content">
+    <section class="main-content container">
+      <h1>RRuby on rails</h1>
       <iframe
         src="https://docs.google.com/presentation/d/e/2PACX-1vT6H7tJaQDecYGufpJgqxpgvDlSaMSxu-oRgte9sK00idBc-Df7EtsbRYdDds1JJw/embed?start=false&loop=false&delayms=3000"
         frameborder="0"
@@ -50,6 +52,7 @@
     </section>
 
     <script src="./../assets/js/main.js"></script>
+    <script src="./../assets/js/common.js"></script>
 
     <!-- Link boostrap -->
     <script
