--- a/courses/testing-courses.html
+++ b/courses/testing-courses.html
@@ -7,6 +7,7 @@
     <title>Tamiltechy | Testing</title>
 
     <link rel="stylesheet" href="./../assets/css/style.css" />
+    <link rel="stylesheet" href="./../assets/css/common.css" />
     <!-- Link boostrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -38,7 +39,8 @@
     <div id="preLoader"></div>
     <!-- Header -->
     <header id="header"></header>
-    <section class="main-content">
+    <section class="main-content container">
+      <h1>Testing</h1>
       <iframe
         src="https://docs.google.com/presentation/d/e/2PACX-1vQ5ca-01W168U2jKwYyxcPSCvt7wrlcv_z4nfQ0e_adcsA6edKVI6J61NAii29Ymw/embed?start=false&loop=false&delayms=3000"
         frameborder="0"
@@ -51,6 +53,7 @@
     </section>
 
     <script src="./../assets/js/main.js"></script>
+    <script src="./../assets/js/common.js"></script>
     <!-- Link boostrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
