--- a/index.html
+++ b/index.html
@@ -74,17 +74,15 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="./exercises/java-exercises.html"><i class="fa-brands fa-java"></i>
                     Java</a></li>
-                <li><a class="dropdown-item" href="./exercises/mysql-exercises.html"><i class="fa-solid fa-code"></i>
-                    Mysql</a></li>
-                <li>
+                <!-- <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#courses">More..</a></li>
+                <li><a class="dropdown-item" href="#courses">More..</a></li> -->
               </ul>
             </li>
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="#">Cheat Sheet</a>
-            </li> -->
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
             </li>
@@ -207,7 +205,7 @@
           </a>
         </div>
         <div class="col">
-          <a href="./courses/coumputer-fundamental-courses.html">
+          <a href="./courses/computer-fundamental-courses.html">
             <div class="course-card computer-fundamental">
               <div class="LogoDiv">
                 <img src="./assets/images/computer-fundamental.png" alt="computer-fundamental-courses" width=90%">
