--- a/courses/java-courses.html
+++ b/courses/java-courses.html
@@ -39,6 +39,7 @@
     <div id="preLoader"></div>
     <!-- Header -->
     <header id="header"></header>
+
     <section class="main-content container" id="java">
       <h1>Java</h1>
       <div>
@@ -154,7 +155,7 @@
       </div>
     </section>
     <section class="container" id="java-operator">
-      <h1>operators</h1>
+      <h1>Operators</h1>
       <h3 id="arithmetic-operator-in-java">Arithmetic operator</h3>
       <hr />
 
