--- a/courses/ruby-on-rails-courses.html
+++ b/courses/ruby-on-rails-courses.html
@@ -39,7 +39,7 @@
     <!-- Header -->
     <header id="header"></header>
     <section class="main-content container">
-      <h1>RRuby on rails</h1>
+      <h1>Ruby on rails</h1>
       <iframe
         src="https://docs.google.com/presentation/d/e/2PACX-1vT6H7tJaQDecYGufpJgqxpgvDlSaMSxu-oRgte9sK00idBc-Df7EtsbRYdDds1JJw/embed?start=false&loop=false&delayms=3000"
         frameborder="0"
