--- a/courses/computer-fundamental-courses.html
+++ b/courses/computer-fundamental-courses.html
@@ -41,15 +41,17 @@
     <header id="header"></header>
     <section class="main-content">
       <h1>Computer fundamental</h1>
-      <iframe
-        src="https://docs.google.com/presentation/d/e/2PACX-1vRJTLoez3LeIB1w2LjYx3OOdVgflrcnbeOvOzw5ovd0GQQ7WAc_pxKEgCe2t7EEWg/embed?start=false&loop=false&delayms=3000"
-        frameborder="0"
-        width="1440"
-        height="839"
-        allowfullscreen="true"
-        mozallowfullscreen="true"
-        webkitallowfullscreen="true"
-      ></iframe>
+      <div>
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vTyg_REwKvjF0esFl87rLgZM_PsBVXcYb3DAd9tXq7rw_T4CiHrldWowzxGBtMUxg/embed?start=false&loop=false&delayms=3000"
+          frameborder="0"
+          width="1440"
+          height="839"
+          allowfullscreen="true"
+          mozallowfullscreen="true"
+          webkitallowfullscreen="true"
+        ></iframe>
+      </div>
     </section>
 
     <script src="./../assets/js/main.js"></script>
