--- a/courses/dbms-courses.html
+++ b/courses/dbms-courses.html
@@ -40,15 +40,17 @@
     <header id="header"></header>
     <section class="main-content">
       <h1>DBMS</h1>
-      <iframe
-        src="https://docs.google.com/presentation/d/e/2PACX-1vQv0JbS8cu62XhdZnp-bzhW-Df1UHuf2Dv2hl_sSKlitrKMw0iPD4d39ZBYvxf5sQ/embed?start=false&loop=false&delayms=3000"
-        frameborder="0"
-        width="1440"
-        height="839"
-        allowfullscreen="true"
-        mozallowfullscreen="true"
-        webkitallowfullscreen="true"
-      ></iframe>
+      <div>
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vQv0JbS8cu62XhdZnp-bzhW-Df1UHuf2Dv2hl_sSKlitrKMw0iPD4d39ZBYvxf5sQ/embed?start=false&loop=false&delayms=3000"
+          frameborder="0"
+          width="1440"
+          height="839"
+          allowfullscreen="true"
+          mozallowfullscreen="true"
+          webkitallowfullscreen="true"
+        ></iframe>
+      </div>
     </section>
 
     <script src="./../assets/js/main.js"></script>
