--- a/courses/javascript-courses.html
+++ b/courses/javascript-courses.html
@@ -41,15 +41,17 @@
 
     <section class="main-content container">
       <h1>Javascript</h1>
-      <iframe
-        src="https://docs.google.com/presentation/d/e/2PACX-1vQx1UYeLH8AZvftL8uXAmF1BH5wy0NGHrLgoLXtnOjFv_QQtOMJ0--GZjaiLywOHg/embed?start=false&loop=false&delayms=3000"
-        frameborder="0"
-        width="1440"
-        height="839"
-        allowfullscreen="true"
-        mozallowfullscreen="true"
-        webkitallowfullscreen="true"
-      ></iframe>
+      <div>
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vQx1UYeLH8AZvftL8uXAmF1BH5wy0NGHrLgoLXtnOjFv_QQtOMJ0--GZjaiLywOHg/embed?start=false&loop=false&delayms=3000"
+          frameborder="0"
+          width="1440"
+          height="839"
+          allowfullscreen="true"
+          mozallowfullscreen="true"
+          webkitallowfullscreen="true"
+        ></iframe>
+      </div>
     </section>
 
     <script src="./../assets/js/main.js"></script>
