--- a/courses/linux-courses.html
+++ b/courses/linux-courses.html
@@ -40,15 +40,17 @@
     <header id="header"></header>
     <section class="main-content">
       <h1>Linux</h1>
-      <iframe
-        src="https://docs.google.com/presentation/d/e/2PACX-1vRjFk_h7oKffkD66PYXY1sXRgbhBuE0NHsLE3RKz0v9eyihHItY6rDsDTzWUTR9Wg/embed?start=false&loop=false&delayms=3000"
-        frameborder="0"
-        width="1440"
-        height="839"
-        allowfullscreen="true"
-        mozallowfullscreen="true"
-        webkitallowfullscreen="true"
-      ></iframe>
+      <div>
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vRjFk_h7oKffkD66PYXY1sXRgbhBuE0NHsLE3RKz0v9eyihHItY6rDsDTzWUTR9Wg/embed?start=false&loop=false&delayms=3000"
+          frameborder="0"
+          width="1440"
+          height="839"
+          allowfullscreen="true"
+          mozallowfullscreen="true"
+          webkitallowfullscreen="true"
+        ></iframe>
+      </div>
     </section>
 
     <script src="./../assets/js/main.js"></script>
