--- a/courses/testing-courses.html
+++ b/courses/testing-courses.html
@@ -41,15 +41,17 @@
     <header id="header"></header>
     <section class="main-content container">
       <h1>Testing</h1>
-      <iframe
-        src="https://docs.google.com/presentation/d/e/2PACX-1vQ5ca-01W168U2jKwYyxcPSCvt7wrlcv_z4nfQ0e_adcsA6edKVI6J61NAii29Ymw/embed?start=false&loop=false&delayms=3000"
-        frameborder="0"
-        width="1440"
-        height="839"
-        allowfullscreen="true"
-        mozallowfullscreen="true"
-        webkitallowfullscreen="true"
-      ></iframe>
+      <div>
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vQ5ca-01W168U2jKwYyxcPSCvt7wrlcv_z4nfQ0e_adcsA6edKVI6J61NAii29Ymw/embed?start=false&loop=false&delayms=3000"
+          frameborder="0"
+          width="1440"
+          height="839"
+          allowfullscreen="true"
+          mozallowfullscreen="true"
+          webkitallowfullscreen="true"
+        ></iframe>
+      </div>
     </section>
 
     <script src="./../assets/js/main.js"></script>
