--- a/courses/css-courses.html
+++ b/courses/css-courses.html
@@ -39,16 +39,18 @@
     <!-- Header -->
     <header id="header"></header>
     <section class="main-content container">
-      <h1>Css</h1>
-      <iframe
-        src="https://docs.google.com/presentation/d/e/2PACX-1vRV4N5057jd9H9PRWC-YxC9zU12ttp3xdiyuQkkwwR_nPr6EckedzojqdHaeJfCjw/embed?start=false&loop=false&delayms=3000"
-        frameborder="0"
-        width="1440"
-        height="839"
-        allowfullscreen="true"
-        mozallowfullscreen="true"
-        webkitallowfullscreen="true"
-      ></iframe>
+      <h1>CSS</h1>
+      <div>
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vRV4N5057jd9H9PRWC-YxC9zU12ttp3xdiyuQkkwwR_nPr6EckedzojqdHaeJfCjw/embed?start=false&loop=false&delayms=3000"
+          frameborder="0"
+          width="1440"
+          height="839"
+          allowfullscreen="true"
+          mozallowfullscreen="true"
+          webkitallowfullscreen="true"
+        ></iframe>
+      </div>
     </section>
 
     <script src="./../assets/js/main.js"></script>
