--- a/courses/html-courses.html
+++ b/courses/html-courses.html
@@ -43,15 +43,17 @@
     <header id="header"></header>
     <section class="main-content container">
       <h1>HTML</h1>
-      <iframe
-        src="https://docs.google.com/presentation/d/e/2PACX-1vRZ22kP7STbcQiNGHRCBO844DKyCUsQUwGistuWnAxHDlknBwlRLl-mESlU8KM6DA/embed?start=true&loop=true&delayms=3000"
-        frameborder="0"
-        width="658"
-        height="857"
-        allowfullscreen="true"
-        mozallowfullscreen="true"
-        webkitallowfullscreen="true"
-      ></iframe>
+      <div>
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vRZ22kP7STbcQiNGHRCBO844DKyCUsQUwGistuWnAxHDlknBwlRLl-mESlU8KM6DA/embed?start=true&loop=true&delayms=3000"
+          frameborder="0"
+          width="658"
+          height="857"
+          allowfullscreen="true"
+          mozallowfullscreen="true"
+          webkitallowfullscreen="true"
+        ></iframe>
+      </div>
     </section>
 
     <script src="../assets/js/main.js"></script>
