--- a/courses/mysql-courses.html
+++ b/courses/mysql-courses.html
@@ -40,15 +40,17 @@
     <header id="header"></header>
     <section class="main-content container">
       <h1>Mysql</h1>
-      <iframe
-        src="https://docs.google.com/presentation/d/e/2PACX-1vSmSKjJb5QSx9XhNrRECWldWAaVD9kGlo-6Sgiu_ki99biIuXlEE7ic3mqwGs1ZIw/embed?start=false&loop=false&delayms=3000"
-        frameborder="0"
-        width="1440"
-        height="839"
-        allowfullscreen="true"
-        mozallowfullscreen="true"
-        webkitallowfullscreen="true"
-      ></iframe>
+      <div>
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vSmSKjJb5QSx9XhNrRECWldWAaVD9kGlo-6Sgiu_ki99biIuXlEE7ic3mqwGs1ZIw/embed?start=false&loop=false&delayms=3000"
+          frameborder="0"
+          width="1440"
+          height="839"
+          allowfullscreen="true"
+          mozallowfullscreen="true"
+          webkitallowfullscreen="true"
+        ></iframe>
+      </div>
     </section>
 
     <script src="./../assets/js/main.js"></script>
